# scrapper

./: README.md  pyproject.toml  requirements.txt  scrapy.cfg  setup.cfg
scrapper/: middlewares.py  settings.py
scrapper/spiders/: nsc_examinations.py
