[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapper"
description = "Collection of data scrapping spiders"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [
    { name = "Matimu Chauke", email = "matimu@chauke.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Scrapy==2.10.0"
]

[tool.hatch.version]
path = "scrapper/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/scrapper",
]
